testdata/zkc/invalid/constant_invalid_03.zkc
;;error:2:23-28:unknown symbol
constant u8 LARGEPO = LARGE+1
